<resources>
    <string name="app_name">Cocktail Bar New</string>
    <string name="binding_is_not_init">Binding isn not init</string>
    <string name="view_model_is_not_init">ViewModel is not init</string>
    <string name="start_image_cont_desc">Start image</string>
    <string name="my_cocktails_text_view">My cocktails</string>
    <string name="add_your_first_cocktail_text_view">Add your first\n cocktail here</string>
    <string name="create_cocktail_fab_cont_desc">Create cocktail</string>
    <string name="save_cocktail_button_text">Save</string>
    <string name="cancel_cocktail_button_text">Cancel</string>
    <string name="cocktail_name_text_input_layout_hint">Title</string>
    <string name="cocktail_description_text_input_layout_hint">Description</string>
    <string name="optional_field_text_view_text">Optional field</string>
    <string name="ingredients_text_view_text">Ingredients</string>
    <string name="cocktail_recipe_text_input_layout_hint">Recipe</string>
    <string name="failed_to_load_data">Something went wrong… Failed to load data!</string>
    <string name="input_error_add_title">Add title</string>
    <string name="empty_ingredients_toast_message">There must be at least one ingredient!</string>
    <string name="add_ingredient_text">Add ingredient</string>
    <string name="add_button_text">Add</string>
    <string name="cancel_ingredient_button">Cancel</string>
    <string name="inserted_successfully_message">Saved successfully!</string>
    <string name="inserted_failed_message">Failed to insert!</string>
    <string name="deleted_successfully_message">Deleted successfully!</string>
    <string name="deleted_failed_message">Failed to delete!</string>
    <string name="cocktail_details_recipe_title">Recipe:</string>
    <string name="edit_cocktail_button_text">Edit</string>
    <string name="failed_to_get_cocktail">Failed to get selected cocktail!</string>
    <string name="failed_to_get_cocktail_to_edit">Failed to get selected cocktail to edit!</string>
    <string name="pick_photo_button_text">Choose a photo</string>
    <string name="delete_photo_button_text">Delete a photo</string>
    <string name="first_cocktails_share_message">See what cocktails I created in the Cocktail Bar app!\n</string>
    <string name="last_cocktails_share_message">Do you want to try it?</string>
    <string name="end_etc_message">and etc.\n</string>
    <string name="confirm_delete_title_text">Confirm the deletion</string>
    <string name="question_delete_text">Are you sure you want to delete this cocktail?</string>
    <string name="delete_cocktail_button_text">Delete</string>
    <string name="add_ingredient_hint">Ingredient</string>
</resources>