<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/padding_24">

    <TextView
        style="@style/Text.Title"
        android:id="@+id/add_ingredient_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_name_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/add_ingredient_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_ingredient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/add_button_text"
        android:textAppearance="@style/Text.OnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_name_text_input_layout" />

    <Button
        android:id="@+id/cancel_ingredient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/cancel_ingredient_button"
        android:textAppearance="@style/Text.OnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_button" />

</androidx.constraintlayout.widget.ConstraintLayout>